--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node prisma/seed/seed.js",
-    "start": "node src/app.js",
+    "start": "node --watch src/app.js",
     "dev": "nodemon app.js"
   },
   "keywords": [],
