--- a/user-frontend/package.json
+++ b/user-frontend/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@vitest/ui": "^2.1.2",
+    "jsdom": "^25.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "vitest": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
