--- a/user-frontend/package.json
+++ b/user-frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^16.0.1",
     "@vitest/ui": "^2.1.2",
     "jsdom": "^25.0.1",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
