--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "dompurify": "^3.1.7",
+    "jwt-decode": "^4.0.0"
   }
 }
