add blog edit/delete, change blogPreview

--- a/author-frontend/package.json
+++ b/author-frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@tinymce/tinymce-react": "^5.1.1",
     "dompurify": "^3.1.7",
     "jsonwebtoken": "^9.0.2",
