--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "dompurify": "^3.1.7",
     "jwt-decode": "^4.0.0"
   }
