--- a/package.json
+++ b/package.json
@@ -1,8 +1,39 @@
 {
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom",
+    "roots": [
+      "<rootDir>/author-frontend/src",
+      "<rootDir>/user-frontend/src",
+      "<rootDir>/shared"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ],
+    "testTimeout": 10000
+  },
   "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^14.3.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3"
   },
   "dependencies": {
@@ -10,6 +41,7 @@
     "@mdi/react": "^1.6.1",
     "dompurify": "^3.1.7",
     "jwt-decode": "^4.0.0",
-    "masonry-layout": "^4.2.2"
+    "masonry-layout": "^4.2.2",
+    "react-router-dom": "^6.27.0"
   }
 }
