--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dompurify": "^3.1.7",
     "jwt-decode": "^4.0.0",
     "masonry-layout": "^4.2.2",
+    "prop-types": "^15.8.1",
     "react-router-dom": "^6.27.0"
   }
 }
