--- a/user-frontend/package.json
+++ b/user-frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@vitest/ui": "^2.1.2",
+    "dompurify": "^3.1.7",
     "jsdom": "^25.0.1",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
