--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "dompurify": "^3.1.7",
+    "isomorphic-dompurify": "^2.16.0",
     "jwt-decode": "^4.0.0",
     "masonry-layout": "^4.2.2",
     "prop-types": "^15.8.1",
