--- a/shared/package.json
+++ b/shared/package.json
@@ -2,7 +2,15 @@
   "name": "shared",
   "version": "1.0.0",
   "peerDependencies": {
-    "dompurify": "^3.0.5"
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.1.7",
+    "isomorphic-dompurify": "^2.16.0",
+    "jwt-decode": "^4.0.0",
+    "masonry-layout": "^4.2.2",
+    "prop-types": "^15.8.1",
+    "react-router-dom": "^6.27.0"
   },
   "main": "index.js",
   "scripts": {
