--- a/shared/package.json
+++ b/shared/package.json
@@ -10,7 +10,8 @@
     "jwt-decode": "^4.0.0",
     "masonry-layout": "^4.2.2",
     "prop-types": "^15.8.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "@tinymce/tinymce-react": "^5.1.1"
   },
   "main": "index.js",
   "scripts": {
