--- a/user-frontend/package.json
+++ b/user-frontend/package.json
@@ -22,7 +22,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.2",
+    "@tinymce/tinymce-react": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
