--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "build": "npm run build:user && npm run build:author",
+    "build:user": "cd user-frontend && npm run build",
+    "build:author": "cd author-frontend && npm run build"
   },
   "jest": {
     "testEnvironment": "jest-environment-jsdom",
