--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jwt-decode": "^4.0.0",
     "masonry-layout": "^4.2.2",
     "prop-types": "^15.8.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "@tinymce/tinymce-react": "^5.1.1"
   }
 }
