--- a/package.json
+++ b/package.json
@@ -42,13 +42,15 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/dompurify": "^3.0.5",
     "dompurify": "^3.1.7",
     "isomorphic-dompurify": "^2.16.0",
     "jwt-decode": "^4.0.0",
     "masonry-layout": "^4.2.2",
     "prop-types": "^15.8.1",
-    "react-router-dom": "^6.27.0",
-    "@tinymce/tinymce-react": "^5.1.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   }
 }
