--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/react": "^1.6.1",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/dompurify": "^3.0.5",
     "@vitest/ui": "^2.1.2",
     "dompurify": "^3.1.7",
@@ -22,8 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "vitest": "^2.1.2",
-    "@tinymce/tinymce-react": "^5.1.1"
+    "vitest": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
